kubernetes/apps/networking/ingresses/ingressRoutes/tautulli/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name tautulli
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tautulli.${SECRET_DOMAIN}`)
      priority: 99
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: *name
          port: 8181
          namespace: default
    - kind: Rule
      match: Host(`tautulli.${SECRET_DOMAIN}`) && (Headers(`X-Api-Key`, `${TAUTULLI_DEVICE_TOKEN}`) || Query(`apikey`, `${TAUTULLI_DEVICE_TOKEN}`))
      priority: 100
      middlewares:
        - name: headers
          namespace: networking
      services:
        - name: *name
          port: 8181
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
